Updated UI and fixed issues

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
     "calories": "Calories",
     "streak": "Streak",
     "micronutrients": "Micronutrients",
-    "quickTips": "Quick Tips for a Healthier Life",
+    "quickTips": "Quick Health Tip",
     "progress": "Progress",
     "details": "Click for details",
     "recommended": "Recommended",
