--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,7 +12,7 @@
     "discover": "Discover",
     "feedback": "Feedback",
     "account": "Account",
-    "logFood": "Log Food",
+    "logFood": "Log Meal",
     "chooseMeal": "Choose your meal",
     "breakfast": "Breakfast",
     "lunch": "Lunch",
