--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,7 +19,7 @@
     "snacks": "Snacks",
     "dinner": "Dinner",
     "recipies": "Easy home made recipies",
-    "exercises": "Free Exercise Plan for Weight Loss",
+    "exercises": "Fat loss Exercise Plan",
     "profile": "Profile",
     "name": "Name",
     "age": "Age",
