Minor color fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,7 +18,7 @@
     "lunch": "Lunch",
     "snacks": "Snacks",
     "dinner": "Dinner",
-    "recipies": "Easy home made recipies",
+    "recipies": "Home made recipies",
     "exercises": "Fat loss Exercise Plan",
     "profile": "Profile",
     "name": "Name",
