--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
     "streak": "Streak",
     "micronutrients": "Micronutrients",
     "quickTips": "Quick Health Tip",
-    "progress": "Progress",
+    "progress": "Calories Intake History",
     "details": "Click for details",
     "recommended": "Recommended",
     "days": "Days",
