Fix ads and add PP support

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,5 +43,6 @@
     "fats": "Fats",
     "carbs": "Carbs",
     "proteins": "Proteins",
-    "water": "Water"
+    "water": "Water",
+    "weight": "Weight"
 }
